# Matkivskyi_Duplom

./: .gitignore  AGENTS.md  README.md  README.txt
board-side/ws-camera-imgproc-usb/camera-imgproc-usb/: common.mk
host-side/: .gitignore  AGENTS.md  README.md  erorrlog
host-side/host/: README.md  pyproject.toml  run_gui.sh
host-side/host/modusmate_host/: __init__.py  algo_lib.py  algo_metrics.py  algo_train.py  algos.py  benchmark.py  c_export.py  camera_bench.py  dataset.py  full_pipeline.py  gui.py  link.py  models.py  plot_results.py  protocol.py  sweep.py
host-side/host/scripts/: generate_family_plots.py  generate_report_plots.py  smoke_test_board.py
host-side/host/tests/: conftest.py  test_algo_train.py  test_algos.py  test_algos_metadata.py  test_benchmark_api.py  test_c_export.py  test_dataset.py  test_link_loopback.py  test_models_registry.py  test_protocol.py  test_reliability.py
host-side/models/adaptive_gaussian_rps_2026-04-28/: manifest.json  model.c  model.h
host-side/models/adaptive_mean_rps_2026-04-28/: manifest.json  model.c  model.h
host-side/models/agast_rps_2026-04-28/: manifest.json  model.c  model.h
host-side/project_creator/: build_wrapper.py  cli_wrapper.py  config.py  manifest_parser.py  project_creator.py  requirements.txt
report/: README.md  all_results_tables.tex  latexforspecification.tex  test.tex
report/data/: algo_train_results.csv  camera_bench_report.csv  modusmate_full_results.xlsx  results.csv  results_summary.csv  sweep_results.csv
report/scripts/: generate_family_plots.py  generate_report_plots.py
(+251 files in other folders)
